# lambdaf

./: .gitignore  .gitmodules  Anf.hs  Base.hs  Errors.hs  Expr.hs  IO.hs  KappaInterpreter.hs  LICENSE  Main.hs  Position.hs  Pretty.hs  README.md  README.org  Record.hs  TypeChecker.hs  Types.hs  Utils.hs  cabal.project  default.nix  lambdaf.cabal  shell.nix  stack.yaml
.github/workflows/: haskell.yml
elisp/: lf-mode.el
examples/: anf.lf  anf2.lf  dyn1.lf  dyn2.lf  exc.lf  exc2.lf  foo.lf  kappa1.lf  kappa2.lf  link.lf  rec.lf  variant.lf  variant2.lf
src/: Anf.hs  Base.hs  Context.hs  Errors.hs  Eval.hs  Expr.hs  IO.hs  Position.hs  Pretty.hs  Record.hs  Sugared.hs  TypeChecker.hs  Types.hs  Utils.hs
src/Prim/: Anf.hs  Base.hs  Dyn.hs  Exception.hs  IO.hs  Kappa.hs  Link.hs  Record.hs  Variant.hs
src/Prim/Link/: Types.hs
src/Syntax/: Desugar.hs  Grammar.hs  Position.hs  Sugared.hs
