name:                lambdaf
version:             0.0.0.1
-- synopsis:
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka
maintainer:          esmolanka@gmail.com
copyright:           Eugene Smolanka
category:            Language
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  exposed-modules:
    Context
    Errors
    Expr
    Eval
    Pretty
    Prim.Anf
    Prim.Base
    Prim.IO
    Prim.Record
    Prim.Variant
    Prim.Link
    Prim.Link.Types
    Prim.Exception
    Syntax.Position
    Syntax.Sugared
    TypeChecker
    Types
    Utils
  build-depends:
    base >= 4.7 && < 5, prettyprinter, containers, transformers-compat,
    text, recursion-schemes, fastsum, fused-effects, sexp-grammar, free,
    bytestring
  default-language:    Haskell2010


executable lf
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:
    lambdaf, base >= 4.7 && < 5, bytestring, prettyprinter, containers,
    transformers-compat, text, recursion-schemes, fastsum, fused-effects,
    sexp-grammar 
